--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "description": "정각과 50분에 소리를 내는 시계 앱",
   "start_url": "/index.html",
   "id": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "display_override": ["window-controls-overlay", "fullscreen"],
   "orientation": "portrait",
@@ -12,9 +13,12 @@
   "lang": "ko-KR",
   "dir": "auto",
   "categories": ["utilities", "productivity", "education"],
+  "iarc_rating_id": "e6456041-0679-4595-b65f-756184a4a159",
   "launch_handler": {
     "client_mode": "navigate-existing"
   },
+  "prefer_related_applications": false,
+  "related_applications": [],
   "icons": [
     {
       "src": "https://placehold.co/192x192/000000/FFFFFF?text=A",
@@ -39,15 +43,6 @@
       "type": "image/png"
     }
   ],
-  "share_target": {
-    "action": "/share.html",
-    "method": "GET",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
-    }
-  },
   "shortcuts": [
     {
       "name": "정각 알림",
